--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,10 +2,9 @@ version: '3'
 services:
   redis:
     image: redis
-    ports:
-      - "6379:6379"
     volumes:
       - "./data/redis:/data"
+    restart: always
   db:
     image: mysql
     ports:
@@ -20,6 +19,7 @@ services:
       - ./mysql:/var/lib/mysql
       - ./sql:/docker-entrypoint-initdb.d
       - ./mysql-confd:/etc/mysql/conf.d
+    restart: always
 networks:
   default:
     external:
