--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,8 @@ version: '3'
 services:
   redis:
     image: redis
+    ports:
+      - "6379:6379"
     volumes:
       - "./data/redis:/data"
     restart: always
@@ -20,7 +22,3 @@ services:
       - ./sql:/docker-entrypoint-initdb.d
       - ./mysql-confd:/etc/mysql/conf.d
     restart: always
-networks:
-  default:
-    external:
-      name: db_sharing
